<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/cardview_horizontal_margin"
    android:layout_marginVertical="@dimen/cardview_vertical_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_size"
        android:layout_margin="@dimen/margin_in_card">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="@dimen/avatar_width"
            android:layout_height="@dimen/avatar_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/first_names" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/user_login"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:text="@tools:sample/last_names" />

        <TextView
            android:id="@+id/company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/company_text"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:text="@tools:sample/last_names" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/location"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/location_text"
            app:layout_constraintTop_toBottomOf="@+id/company_text"
            tools:text="@tools:sample/last_names" />

        <TextView
            android:id="@+id/repos_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/repos"
            app:layout_constraintEnd_toStartOf="@+id/followers_text"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

        <TextView
            android:id="@+id/repos_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@id/repos_text"
            app:layout_constraintTop_toBottomOf="@+id/repos_text"
            tools:text="10" />

        <TextView
            android:id="@+id/followers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/followers"
            app:layout_constraintEnd_toStartOf="@+id/following_text"
            app:layout_constraintStart_toEndOf="@+id/repos_text"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

        <TextView
            android:id="@+id/followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@id/followers_text"
            app:layout_constraintTop_toBottomOf="@+id/followers_text"
            tools:text="10" />

        <TextView
            android:id="@+id/following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/followers_text"
            app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

        <TextView
            android:id="@+id/following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@id/following_text"
            app:layout_constraintTop_toBottomOf="@+id/following_text"
            tools:text="10" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>